 • Added lups thrusters to armatlas/corvalk/banshee
 • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
 • Renamed modoptions: removed 'mo_' prefix and change for chickens to 'chicken_'
 • Added the "Traitor" award = destroying allied units.
 • Unit stats show again when having unit selected (unless you have chat input showing)

Fixes:
 • Options widget remembers/restores some spring config settings (switching engines lately made config be reset)
 • Auto closing game when loaded unsupported AI (supported: DAI, KAIK, NullAI, Chickens)
 • Fixed DAI echospam + working with multiple DAI bots + behavior improvements
 • Decoy com attacked warning sound is now a regular unit under attack sound
 • Fixed "map edge extension" not always showing up when it should
 • Fixed "States Prefs" widget overriding config table with empty table after loading a replay
 • Fixed Bloom rendering the map black on certain maps

Removed:
 • Removed "SmoothCam" widget: its integrated into options widget
 • Removed "GroupMove" widget because it had side effects/downsides
 • Removed old console and old ally resource bars widget
 • Removed modoptions: "Control Victory", "firethroughfriendly", "smallfeaturenoblock", "reclaimunitefficiency", "mm_diminish_factor", "enemycomcount", "no_close_spawns", "heatmap"


10.10 -> 10.11
23/07/2018

Balance changes:
 • Decreased Core Supporter (corvette) metal cost from 165 to 160.
 • Liche: -5% maxSpeed, +5% energy cost, +2.5% buildTime, damages to commanders 3150 (vs 3350)

Other:
 • Added "Vote interface" widget (displays on top of minimap, top left)
 • Added "Lua UiKeys Loader" widget allowing to load "uikeys.txt" file located in "LuaUI/Widgets_BA"
 • Added "real map and model lights" option to light effects widget. (disable this if you have old gpu)
 • Enabled improved "apply heat distortion" option by default (light effects widget)
 • Flamethrower spray less wide + hit effect changed